[gd_scene load_steps=22 format=3 uid="uid://b3k3h5lsx621j"]

[ext_resource type="Script" path="res://scenes/ui/unlock_card.gd" id="1_1ouwp"]
[ext_resource type="PackedScene" uid="uid://dhmult1m4ltsq" path="res://scenes/components/random_stream_player_component.tscn" id="2_tqpvr"]
[ext_resource type="AudioStream" uid="uid://n1ae8dtsjpvx" path="res://assets/audio/ui/switch1.ogg" id="3_q7fop"]
[ext_resource type="AudioStream" uid="uid://bmkgcrqmwobm6" path="res://assets/audio/ui/switch2.ogg" id="4_8mhg5"]
[ext_resource type="AudioStream" uid="uid://cmj3f2xwcqfen" path="res://assets/audio/ui/switch3.ogg" id="5_fb61n"]
[ext_resource type="AudioStream" uid="uid://cjrbudt8gw1vx" path="res://assets/audio/ui/switch4.ogg" id="6_ufde1"]
[ext_resource type="AudioStream" uid="uid://ckndb3hgp38pt" path="res://assets/audio/ui/switch5.ogg" id="7_s0has"]
[ext_resource type="AudioStream" uid="uid://cjshn7mfl4uys" path="res://assets/audio/ui/switch6.ogg" id="8_t1h8w"]
[ext_resource type="AudioStream" uid="uid://c5olhnhmvh0oi" path="res://assets/audio/ui/switch7.ogg" id="9_a0aqt"]
[ext_resource type="AudioStream" uid="uid://cog4kfcngimsh" path="res://assets/audio/ui/switch8.ogg" id="10_6uy6j"]
[ext_resource type="AudioStream" uid="uid://b8q4kh41hex1g" path="res://assets/audio/ui/switch9.ogg" id="11_64gg7"]
[ext_resource type="AudioStream" uid="uid://dqotog2d3xy58" path="res://assets/audio/ui/switch10.ogg" id="12_u2p84"]

[sub_resource type="Animation" id="Animation_tseqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5lr2e"]
resource_name = "discard"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1wmui"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_50fsr"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.07053, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6h2a"]
_data = {
"RESET": SubResource("Animation_tseqd"),
"discard": SubResource("Animation_5lr2e"),
"in": SubResource("Animation_1wmui"),
"selected": SubResource("Animation_50fsr")
}

[sub_resource type="Animation" id="Animation_da6xt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_332qi"]
resource_name = "grow"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="Animation" id="Animation_ni6ga"]
resource_name = "shake"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcvyh"]
_data = {
"RESET": SubResource("Animation_da6xt"),
"grow": SubResource("Animation_332qi"),
"shake": SubResource("Animation_ni6ga")
}

[node name="UnlockCard" type="PanelContainer" groups=["unlock_card"]]
custom_minimum_size = Vector2(210, 250)
offset_right = 210.0
offset_bottom = 276.0
pivot_offset = Vector2(125, 100)
script = ExtResource("1_1ouwp")

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_tqpvr")]
volume_db = -15.0
streams = Array[AudioStream]([ExtResource("3_q7fop"), ExtResource("4_8mhg5"), ExtResource("5_fb61n"), ExtResource("6_ufde1"), ExtResource("7_s0has"), ExtResource("8_t1h8w"), ExtResource("9_a0aqt"), ExtResource("10_6uy6j"), ExtResource("11_64gg7"), ExtResource("12_u2p84")])

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_tqpvr")]
streams = Array[AudioStream]([ExtResource("3_q7fop"), ExtResource("4_8mhg5"), ExtResource("5_fb61n"), ExtResource("6_ufde1"), ExtResource("7_s0has"), ExtResource("8_t1h8w"), ExtResource("9_a0aqt"), ExtResource("10_6uy6j"), ExtResource("11_64gg7"), ExtResource("12_u2p84")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r6h2a")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_pcvyh")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.938639, 0.665576, 0.209255, 1)
theme_override_font_sizes/font_size = 14
text = "TYPE OF ABILITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = -12
theme_override_font_sizes/font_size = 32
text = "Wind Walk"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0% -> 10%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 110)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Description area example. This can say anything like swinging axe ability!"
autowrap_mode = 2
